fix summary display on safari

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,3 +67,9 @@
     @apply bg-background text-foreground;
   }
 }
+
+@layer base {
+  summary::-webkit-details-marker {
+    display: none;
+  }
+}
